--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
   "workspaceFolder": "/workspaces/marty_mcfly/",
   "remoteUser": "root",
   "overrideCommand": true,
-  "initializeCommand": "touch .env",
+  "initializeCommand": "touch ${localWorkspaceFolder}/.env",
   "mounts": [
     "type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock,consistency=consistent"
   ],
