--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,11 +1,12 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: a2ec9fc
+_commit: v0.2.0-1-g7a51612
 _src_path: git@github.com:lukin0110/poetry-copier.git
 ci: github
 description: An example of a Python package that was scaffolded with Poetry Copier
 name: Marty McFly
 package_type: package
-repository_url: https://github.com/lukin0110/poetry-copier-package-demo
+repository_url: https://github.com/lukin0110/poetry-copier-package-demo/
 use_makefile: true
 use_private_package_repository: false
+use_private_publish_repository: false
 use_pydantic: true
