--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   devcontainer:
     build:
       context: .
+      args:
+        PYTHON_VERSION: ${PYTHON_VERSION:-3.11.6}
       target: dev
     stdin_open: true
     tty: true
